--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <div data-tab="node" class="tab">NODE.JS</div>
       <div data-tab="jquery" class="tab">jQUERY</div>
       <div data-tab="bootstrap" class="tab">BOOTSTRAP</div>
+      <div data-tab="ultimate" class="tab">Ultimate!</div>
     </div>
   </div>
 
@@ -200,6 +201,16 @@
           <img src="./assets/fido.jpg" />
         </div>
         <span>By FIDO WALKSALOT</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="ultimate">
+      <div class="headline">NEW ARTICLE, data tab Ultimate</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/sir.jpg" />
+        </div>
+        <span>By SIR RUFF'N'STUFF</span>
       </div>
     </div>
 
