--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <title>Lambda Times</title>
   <link rel="icon" href="./favicon.ico">
   <link rel="stylesheet" type="text/css" href="./CSS/index.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="./components/Tabs/Tabs.js" async></script>
-  <!-- <script src="./components/Carousel/Carousel.js" async></script> -->
+  <script src="./components/Carousel/Carousel.js" async></script> -->
 </head>
 
 <body>
@@ -51,14 +52,14 @@
 
   <!-- STRETCH GOAL: ONLY UNCOMMENT THIS WHEN YOU ARE FINISHED WITH THE MAIN OBJECTIVE -->
   <!-- CAROUSEL COMPONENT -->
-  <!-- <div class="carousel">
+<div class="carousel">
     <div class="left-button"><</div>
-    <img src="./assets/carousel/mountains.jpeg" />
-    <img src="./assets/carousel/computer.jpeg" />
-    <img src="./assets/carousel/trees.jpeg" />
-    <img src="./assets/carousel/turntable.jpeg" />
+      <div class ='photo' data-tab='1'><img class="active" src="./assets/carousel/mountains.jpeg" /></div>
+      <div class='photo hidden' data-tab='2'><img src="./assets/carousel/computer.jpeg" /></div>
+      <div class='photo hidden' data-tab='3'><img src="./assets/carousel/trees.jpeg" /></div>
+      <div class='photo hidden' data-tab='4'><img src="./assets/carousel/turntable.jpeg" /></div>
     <div class="right-button">></div>
-  </div> -->
+  </div>
 
   <!-- CARDS COMPONENT -->
   <div class="cards-container">
